# mcpi

./: .coverage 2  .coverage 4  .coverage 5  .coverage 6  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  PROJECT_SPEC.md  README.md  STATUS-2025-10-16-045045.md  STATUS-2025-10-16-182133.md  cli_completion_test_summary.json  coverage.json  debug_claude_code.py  echo  enable_disable_test_summary.json  functional_test_summary.json  installation_implementation_summary.json  mcpi.toml  pyproject.toml  pyproject.toml.bak  test_debug.py  test_debug2.py  test_real_installation.py  test_search_fix.py
.agent_planning/: AGENT.md  ANALYSIS_PYDANTIC_VS_CUE.md  BACKLOG 2.md  BACKLOG-CATALOG-PHASE1-FINAL.md  BACKLOG.md  BACKLOG_CLI_TAB_COMPLETION.md  BEADS_ISSUES_SUMMARY-2025-11-25.md  CATALOG_RENAME_REGRESSION_TESTS.md  CATALOG_RENAME_TEST_SUMMARY.md  CHANGELOG-DRAFT-v0.3.0.md  CLIENT_ROADMAP.md  CONVENTIONS.md  DAY-3-SUMMARY.json  DEPRECATED.md  DIP_AUDIT-2025-11-07-010149.md  EVALUATION-DESIGN-PATTERNS-MCP-2025-11-09.md  EVALUATION-ENABLE-DISABLE-2025-10-28-CORRECTED.md  EVALUATION-USER-INTERNAL-DISABLE-2025-11-13.md  EVALUATION-USER-INTERNAL-DISABLE-IMPLEMENTATION-2025-11-16.md  FEATURES_AND_WORKFLOWS.md  FEATURE_PROPOSAL_CLI_TAB_COMPLETION.md  FEATURE_PROPOSAL_POST_V04_DELIGHT.md  FEATURE_PROPOSAL_SUMMARY.md  FEATURE_PROPOSAL_SUMMARY_POST_v0.5.0.md  FEATURE_PROPOSAL_claude-extension-registry-v2.md  FEATURE_PROPOSAL_claude-extension-registry.md  FUNCTIONAL_TEST_RESULTS.md  FUNCTIONAL_TEST_SUMMARY.json  ICLOUD-COMPATIBLE-FIX-2025-10-30.md  IMPLEMENTATION-SUMMARY-2025-10-31.md  INITIATIVE-ENABLE-DISABLE-REFACTOR.md  MANUAL_TEST_CHECKLIST.md  PACKAGING-INVESTIGATION-2025-10-30.md  PATH-INVESTIGATION-FINAL.md  PLAN-2025-10-21-225314.md  PLAN-2025-10-28-065600.md  PLAN-2025-10-28-072628.md  PLAN-2025-11-16-070237.md  PLAN-2025-11-25-182546.md  PLAN-2025-12-03-010048.md  (+105 more)
.agent_planning/archive/: BACKLOG-2025-11-06-010234.md.archived  BACKLOG-2025-11-18.md.archived  BACKLOG-FZF-IMPLEMENTATION-FIX-2025-11-05.md.archived  BACKLOG-RESCOPE-AUTO-DETECT-2025-11-05.md.archived  BACKLOG.md.archived  BUG_PROPOSAL_USER_GLOBAL_DISABLE_FAILURE.md  COMPLETION-AUDIT-2025-10-29.md.archived  PLAN-2025-10-30-062544.md.archived  PLAN-2025-11-05-233212.md.archived  PLAN-2025-11-07-052005.md.archived  PLAN-2025-11-09-054705.md.archived  PLAN-DIP-REMEDIATION-2025-11-07-010528.md.archived  PLANNING-SUMMARY-2025-10-29.md.archived  (+16 more)
.beads/: beads.left.jsonl  beads.left.meta.json
.claude/: settings.local.json
.venv.nosync/: pyvenv.cfg
archive/: BACKLOG.md.archived  PLAN-2025-10-16-072315.md.superseded
data/: catalog 2.json  catalog.json  registry.cue  registry.json  registry.toml  registry.yaml
docs/: TEMPLATE_AUTHORING_GUIDE.md
scripts/: fix-pth-flags.sh
tests/: CATALOG_RENAME_TEST_STRATEGY.md  DIP_TEST_DOCUMENTATION.md  FUNCTIONAL_TESTS.md  FUNCTIONAL_TESTS_README.md  FUNCTIONAL_TEST_SUMMARY.json  README_BUNDLES_TESTS.md  README_ENV_VAR_TESTS.md  README_PROJECT_MCP_APPROVAL_TESTS.md  README_USER_INTERNAL_DISABLE_ENABLE_TESTS.md  README_USER_INTERNAL_ENABLE_DISABLE.md  TEST-SUMMARY-info-plain-flag.md  TEST_CATALOG_PHASE1_SUMMARY.md  TEST_CLI_COMPLETION.md  TEST_ENABLE_DISABLE_BUGS.md  TEST_ENV_VARS_DOCUMENTATION.md  TEST_HARNESS.md  TEST_RESCOPE.md  TEST_SAFETY.md  TEST_SCOPE_CYCLING.md  TEST_TUI_RELOAD_README.md  TUI_RELOAD_TEST_SUMMARY.json  __init__.py  conftest.py  test_approval_required_handler.py  test_bundles.py  test_bundles_summary.json  test_catalog_manager.py  test_catalog_rename.py  test_catalog_rename_regression.py  test_claude_desktop_plugin.py  test_cli.py  test_cli_catalog_commands.py  test_cli_completion.py  test_cli_comprehensive.py  test_cli_comprehensive_fixed.py  test_cli_integration.py  test_cli_missing_coverage.py  test_cli_new.py  test_cli_refactored.py  test_cli_rescope.py  (+73 more)
(+178 files in other folders)
